--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -99,6 +99,7 @@
 
   text-shadow: 0 0 18px rgba(229, 9, 20, 0.35), 0 0 35px rgba(229, 9, 20, 0.18);
 }
+
 .navbar-links {
   display: flex;
   align-items: center;
@@ -159,7 +160,7 @@
   }
 
   .navbar-brand a {
-    font-size: 1.2rem;
+    font-size: 0.75rem;
   }
 
   .nav-link {
